add swagger docs, md docs
