# trades-receiver-service/docs/swagger.json
@@ -19,6 +19,30 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
+        "/insider-trades/receiver": {
+            "post": {
+                "description": "receiveTrades from external api",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "trades"
+                ],
+                "summary": "receiveTrades from external api",
+                "operationId": "receiveTrades",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/trades/api/v1": {
             "get": {
                 "description": "Get all transactions objects with cursor pagination",
